# float

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  avatar_runner.py  avatar_worker.py  cerebrium.toml  dispatcher.py  dispatcher2.py  docker-compose.yml  generate.py  generate2.py  predownload.py  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml
cerebrium_agent/: Dockerfile  agent.py  cerebrium.toml  requirements.txt
cerebrium_endpoint/: avatar_worker.py  dispatcher.py
cpu_avatar_endpoint/: Dockerfile  agent_message_handler.py  avatar_actions.py  avatar_worker.py  cerebrium.toml  dispatcher.py  main.py  requirements.txt
models/: __init__.py  base_options.py  wav2vec2.py  wav2vec2_ser.py
models/float/: FLOAT.py  FMT.py  encoder.py  generator.py  styledecoder.py
options/: base_options.py
